# taskiq-django

./: .gitignore  .pre-commit-config.yml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code_check.yml  release_pypi.yml
examples/example_app/: asgi.py  settings.py  tasks.py  urls.py  wsgi.py
src/taskiq_django/: __init__.py  admin.py  apps.py  forms.py  models.py  schedule_source.py
src/taskiq_django/migrations/: 0001_initial.py
src/taskiq_django/templates/taskiq_django/: change_form.html  delete_confirmation.html  list_view.html
tests/: settings.py  test_schedule_source.py
